package com.directi.training.ocp.exercice_refactored;

public class SpaceResource implements Resource{
    public int findFreeSlot() {
        // Find free space slot
        return 0;
    }

    public void bookSlot() {
        // Book the space slot
    }

    public void freeSlot(int resourceId) {
        // Free the space slot
    }
}
