package com.directi.training.ocp.exercice_refactored;

public class TimeResource implements Resource{
    public int findFreeSlot() {
        // Find free time slot
        return 0;
    }

    public void bookSlot() {
        // Book the time slot
    }

    public void freeSlot(int resourceId) {
        // Free the time slot
    }
}
